# ride-sharing-system

./: .gitignore  CMakeLists.txt  FRONTEND_UI_FLOW_README.md  README.md  citymapview.cpp  citymapview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resourcemanager.h  riderwindow.cpp  riderwindow.h
City_graph_building_software/: README_GRAPH_MAKER.md  graph maker.html
city_locations_path_data/: city-locations.csv  paths.csv
core/: README_CITY.md  README_DISPATCHENGINE.md  README_DRIVER.md  README_RIDER.md  README_RIDESHARESYSTEM.md  README_ROLLBACKMANAGER.md  README_TRIP.md  city.cpp  city.h  dispatchengine.cpp  dispatchengine.h  driver.cpp  driver.h  main.cpp  rider.cpp  rider.h  ridesharesystem.cpp  ridesharesystem.h  rollbackmanager.cpp  rollbackmanager.h  test_complete_system.cpp  testcity.cpp  trip.cpp  trip.h
